# NeuroGebra

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASETS_STATUS.md  LICENSE  MANIFEST.in  PRE_PUBLISH_CHECKLIST.md  PUBLISHING.md  PUBLISHING_STATUS.md  README.md  READTHEDOCS_SETUP.md  RELEASE_NOTES.md  index.html  mkdocs.yml  objects.inv  publish.ps1  pyproject.toml  setup.py  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  tests.yml
advanced/custom-expressions/: index.html
advanced/framework-bridges/: index.html
advanced/observatory-deep-dive/: index.html
advanced/observatory-pro/: index.html
advanced/optimization/: index.html
advanced/performance/: index.html
advanced/regularization/: index.html
advanced/visualization/: index.html
api/reference/: index.html
benchmarks/: comparison_with_numpy.py  performance_tests.py
docs/: getting-started.md  index.md
docs/advanced/: custom-expressions.md  framework-bridges.md  observatory-deep-dive.md  observatory-pro.md  optimization.md  performance.md  regularization.md  visualization.md
docs/api/: reference.md
docs/examples/: custom_activation.md  custom_loss.md  project_notebooks.md  training_expressions.md
docs/getting-started/: first-program.md  how-it-works.md  installation.md
docs/ml-fundamentals/: math-behind-ml.md  ml-workflow.md  types-of-ml.md  what-is-ml.md
docs/projects/: project1-linear-regression.md  project2-image-classifier.md  project3-neural-network.md
docs/python-refresher/: basics.md  data-handling.md  numpy.md
docs/tutorial/: activations.md  autograd.md  composition.md  datasets.md  expressions.md  gradients.md  losses.md  mathforge.md  model-builder.md  neurocraft.md  tensors.md  training-observatory.md  training.md
docs/tutorials/: advanced.md  beginner.md  intermediate.md
examples/: datasets_showcase.py  test_datasets.py  training_observatory_demo.py
examples/custom_activation/: index.html
examples/custom_loss/: index.html
examples/project_notebooks/: index.html
examples/projects/: 01-image-classification-fmnist-cnn.ipynb  02-image-classification-observatory-pro.ipynb  03-gan-mnist-baseline.ipynb  04-gan-mode-collapse-diagnostics.ipynb  05-diffusion-image-denoising-baseline.ipynb  06-diffusion-math-scheduler-deep-dive.ipynb  07-core-nlp-spam-classifier.ipynb  08-core-nlp-sentiment-classifier.ipynb  09-small-language-model-charlm-from-scratch.ipynb  10-small-language-model-charlm-tuning.ipynb
examples/scripts/: advanced_usage.py  basic_usage.py
examples/training_expressions/: index.html
getting-started/: index.html
getting-started/first-program/: index.html
getting-started/how-it-works/: index.html
getting-started/installation/: index.html
ml-fundamentals/math-behind-ml/: index.html
ml-fundamentals/ml-workflow/: index.html
ml-fundamentals/types-of-ml/: index.html
ml-fundamentals/what-is-ml/: index.html
projects/project1-linear-regression/: index.html
projects/project2-image-classifier/: index.html
projects/project3-neural-network/: index.html
python-refresher/basics/: index.html
python-refresher/data-handling/: index.html
python-refresher/numpy/: index.html
scripts/: add_essential_datasets.py
search/: search_index.json
site/: index.html
src/neurogebra/: __init__.py
tests/: __init__.py  test_integration.py
tests/test_bridges/: test_runtime_validation.py
tests/test_builders/: test_model_builder.py
tests/test_core/: test_autograd.py  test_expression.py  test_forge.py  test_neurocraft.py  test_trainer.py
tests/test_datasets/: test_loaders.py
tests/test_logging/: test_observatory.py  test_observatory_pro.py
tests/test_repository/: test_activations.py  test_algebra.py  test_calculus.py  (+8 more)
(+94 files in other folders)
